--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 		</ul>
 	</div>
 	<div id="show-panel"></div>
-	<script type="text/javascript" src="./index.js"></script>
+	<script type="text/javascript" defer src="./index.js"></script>
 </body>
 </html>
